# workspace

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.md.license  REUSE.toml  audits.toml  flake.nix  vancouver.toml
crates/cabot/: Cargo.toml
crates/cabot/src/: bot.rs  directory.rs  file_store.rs  fuse.rs  main.rs
crates/cabotfs/: Cargo.toml
crates/cabotfs/src/: directory.rs  file_store.rs  fuse.rs  lib.rs
crates/const-hex-lite/: Cargo.toml
crates/const-hex-lite/src/: lib.rs
crates/foxerror/: CHANGELOG.md  Cargo.toml  README.md
crates/foxerror/src/: lib.rs
crates/gekker/: Cargo.toml
crates/gekker/src/: dashboard.html  main.rs
crates/irc-connect/: CHANGELOG.md  Cargo.toml  REUSE.toml
crates/irc-connect/src/: danger.rs  lib.rs
crates/mark-tree/: CHANGELOG.md  Cargo.toml
crates/mark-tree/examples/: ipropt.rs
crates/mark-tree/src/: lib.rs
crates/maw/: Cargo.toml  REUSE.toml
crates/maw/src/: floater.rs  fmt.rs  human.rs  main.rs  now.rs  rank.rs  sort.rs  uni.rs  uwu.rs  yap.rs
crates/metrics-relay/: Cargo.toml
crates/metrics-relay/src/: influx.rs  main.rs  prom.rs
crates/offerparty/: Cargo.toml
crates/offerparty/src/: main.rs
crates/pastiche/: Cargo.toml
crates/pastiche/src/: main.rs
crates/vancouver/: CHANGELOG.md  Cargo.toml  README.md  REUSE.toml
crates/vancouver/src/: audit.rs  check.rs  de.rs  main.rs  merge.rs  metadata.rs  types.rs
crates/vancouver/tests/: integration.rs
crates/vancouver/tests/data/: violation-audits.toml  violation-vancouver.toml
crates/vancouver/tests/data/violation/: Cargo.toml  audits.toml  vancouver.toml
crates/vasm/: CHANGELOG.md  Cargo.toml  README.md  REUSE.toml
crates/vasm/src/: assemble.rs  disassemble.rs  h16.rs  main.rs  parse.rs  repr.rs
crates/vasm/tests/: snapshot.rs
crates/vasm/tests/data/: chal1.asm  chal1.h16  chal2.asm  chal2.h16  chal3.asm  chal3.h16  chal4.asm  chal4.h16  chal5.asm  chal5.h16  hwrite.asm  hwrite.h16  uninit.asm  uninit.h16
foxerror/: CHANGELOG.md  Cargo.toml
foxerror/src/: lib.rs
irc-connect/: CHANGELOG.md  Cargo.toml  LICENSE
irc-connect/src/: lib.rs
mark-tree/: Cargo.toml
mark-tree/src/: lib.rs
markov/: Cargo.toml
maw/: Cargo.toml
maw/src/: floater.rs  fmt.rs  human.rs  main.rs  now.rs  sort.rs  uni.rs  uwu.rs  yap.rs
src/: floater.rs  fmt.rs  human.rs  lib.rs  main.rs  now.rs  sort.rs  uwu.rs  yap.rs
