[package]
name = "irc-connect"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "an abstraction over the kinds of connections useful for irc clients"
repository = "https://github.com/xfnw/workspace"

[dependencies]
foxerror = { version = "0.1.1", path = "../foxerror" }
pin-project-lite = "0.2.16"
tokio = { version = "1.46.1", features = ["net"] }
tokio-rustls = { version = "0.26.2", default-features = false }
tokio-socks = "0.5.2"

[features]
aws_lc_rs = ["tokio-rustls/aws_lc_rs"]
fips = ["tokio-rustls/fips"]
logging = ["tokio-rustls/logging"]
ring = ["tokio-rustls/ring"]
tls12 = ["tokio-rustls/tls12"]

[dev-dependencies]
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
