# SPDX-FileCopyrightText: 2026 xfnw
#
# SPDX-License-Identifier: MIT

[package]
name = "cabot"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository.workspace = true

[dependencies]
argh = { version = "0.1.14", default-features = false, features = ["help"] }
base64 = "0.22.1"
cabotfs = { version = "0.1.0", path = "../cabotfs" }
const-hex-lite = { version = "0.1.0", path = "../const-hex-lite" }
foxerror = { version = "0.1.2", path = "../foxerror" }
hashlink = { version = "0.10.0", default-features = false }
irc-connect = { version = "0.2.1", path = "../irc-connect", features = ["ring", "tls12"] }
irctokens = "0.1.3"
md5 = "0.8.0"
rand = "0.8.6"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "io-util", "sync", "time"] }

[lints]
workspace = true
