[package]
name = "foxerror"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "yet another proc macro for deriving Error on enums"
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["derive"] }

[lints]
workspace = true
