# SPDX-FileCopyrightText: 2025 xfnw
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "gekker"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository.workspace = true

[dependencies]
axum = "0.8.7"
foxerror = { version = "0.1.2", path = "../foxerror" }
irc-connect = { version = "0.2.0", path = "../irc-connect", features = ["ring", "tls12"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }

[lints]
workspace = true
