# SPDX-FileCopyrightText: 2025 xfnw
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "gekker"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository.workspace = true

[dependencies]
axum = { version = "0.8.7", features = ["query"] }
foxerror = { version = "0.1.2", path = "../foxerror" }
irc-connect = { version = "0.2.0", path = "../irc-connect", features = ["ring", "tls12"] }
irctokens = "0.1.3"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time", "sync"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }

[lints]
workspace = true
