[package]
name = "maw"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
base64_light = "0.1.5"
chrono = { version = "0.4.40", default-features = false, features = ["std"] }
half = "2.4.1"
lazy-regex = { version = "3.4.1", default-features = false, features = ["std"] }
rayon = "1.10.0"
sha2 = "0.10.8"
unicode_names2 = "2"
url = { version = "2.5.4", default-features = false }

[lints]
workspace = true
