# SPDX-FileCopyrightText: 2026 xfnw
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "pastiche"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository.workspace = true

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "derive", "macros"] }

[lints]
workspace = true
