# SPDX-FileCopyrightText: 2025 xfnw
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "vancouver"
version = "0.1.0"
edition = "2024"
repository.workspace = true
license = "MPL-2.0"

[dependencies]
argh = "0.1.13"
foxerror = { version = "0.1.2", path = "../foxerror" }
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
toml_edit = { version = "0.23.6", default-features = false, features = ["display", "parse", "serde"] }

[lints]
workspace = true
