# SPDX-FileCopyrightText: 2025 xfnw
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "vasm"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0 AND CC0-1.0"
repository.workspace = true

[dependencies]
argh = { version = "0.1.13", default-features = false, features = ["help"] }
foxerror = { version = "0.1.1", path = "../foxerror" }
nom = "8.0.0"

[lints]
workspace = true
